# chatting-study

./: README.md  setup.cfg
src/chat/: __init__.py  __main__.py  client.py  server.py
src/chat_yooisae02.egg-info/: PKG-INFO  SOURCES.txt
src/chat_yooisae2.egg-info/: PKG-INFO  SOURCES.txt
